// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaWidget simple with errors 1`] = `
Array [
  <label
    htmlFor="_id"
  >
    Some simple label
    <span
      aria-hidden={true}
      className="text-danger ml-1"
    >
       
      *
    </span>
  </label>,
  <div
    className="input-group"
  >
    <textarea
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="_id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={true}
      required={true}
      rows={5}
      value="value"
    />
  </div>,
]
`;

exports[`TextareaWidget simple without errors 1`] = `
Array [
  <label
    htmlFor="_id"
  >
    Some simple label
    <span
      aria-hidden={true}
      className="text-danger ml-1"
    >
       
      *
    </span>
  </label>,
  <div
    className="input-group"
  >
    <textarea
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="_id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={true}
      required={true}
      rows={5}
      value="value"
    />
  </div>,
]
`;

exports[`TextareaWidget simple without required 1`] = `
Array [
  <label
    htmlFor="_id"
  >
    Some simple label
  </label>,
  <div
    className="input-group"
  >
    <textarea
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="_id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={true}
      required={false}
      rows={5}
      value="value"
    />
  </div>,
]
`;
